syntax = "proto3";

// import "google/protobuf/timestamp.proto";
package grpc;

option go_package = "./grpcPb";

service IdentityService {
  rpc GetResIdentity(IdentityResReq) returns (IdentityResResp) {}
  rpc GetUserIdentity(IdentityReq) returns (IdentityResp) {}
}

message IdentityResReq {
  int32 UserID = 1;
}

message IdentityResResp {
  int32 UserID = 1;
  string Role = 2;
  int32 RestaurantID = 3;
}

message IdentityReq {
  int32 UserID = 1;
}

message IdentityResp {
  int32 UserID = 1;
}


service MenuItemService {
    rpc GetMenuItem(GetMenuItemReq) returns (GetMenuItemRes) {}
}

// message Image {
//     string url = 1;
//     int32 width = 2;
//     int32 height = 3;
//     string ext = 4;
//     string cloud_name = 5;
//   }

// message AddOn {
//     string name = 1;
//     Image image = 2;
//     float price = 3;
//   }

// message MenuItemReq {
//     string id = 1;
// }

// message MenuItemRes {
//     string id = 1;
//     string name = 2;
//     string description = 3;
//     Image image = 4;
//     float price = 5;
//     repeated AddOn add_on = 6;
//     google.protobuf.Timestamp updated_at = 7;
//     google.protobuf.Timestamp created_at = 8;
// }

message GetMenuItemReq {
  int32 id = 1;
}

message GetMenuItemRes { 
  string data = 1;
}